Add Prometheus Metrics endpoint
