# api/api.yaml
@@ -8,6 +8,7 @@ info:
 tags:
   - name: Experiences
   - name: Tags
+  - name: Metrics
 servers:
   - url: "http://api.cvapp.com/v1"
 paths:
@@ -226,8 +227,26 @@ paths:
                 }
               schema:
                 $ref: "#/components/schemas/Error"
+  /metrics:
+    get:
+      summary: Metrics
+      description: Returns all metrics
+      operationId: Metrics
+      tags:
+        - Metrics
+      responses:
+        "200":
+          description: Metrics for Prometheus
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MetricsResponse"
 components:
   schemas:
+    MetricsResponse:
+      description: Metrics for Prometheus response
+      example: "Unknown"
+      type: string
     ObjectId:
       description: ObjectId
       properties:
